--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -25,19 +25,11 @@ $-half-pixel-width: math.div(1rem, 32);
     margin-top: ($-offers-card-margin * -2);
 }
 
-.offers__card {
+.offers__card-container {
     $-width: math.div(100%, 3);
 
     width: calc(#{$-width} - #{($-offers-card-margin * 2 + 0.001rem)});
     margin: ($-offers-card-margin * 2) $-offers-card-margin 0 $-offers-card-margin;
-    padding: 0 0 2rem 0;
-    background-color: white;
-    box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.5);
-    border-left: $-offers-card-border-width solid $-offers-card-border-color;
-    border-right: $-offers-card-border-width solid $-offers-card-border-color;
-    border-top: $-offers-card-border-width solid $-offers-card-border-color;
-
-    position: relative;
 
     @media (max-width: $breakpoint-md) {
         $-width-md: (100% * 0.5);
@@ -49,7 +41,21 @@ $-half-pixel-width: math.div(1rem, 32);
     }
 }
 
-.offers__card::after {
+.offers__card {
+    box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.5);
+    position: relative;
+}
+
+
+.offers__card-primary {
+    padding: 0 0 2rem 0;
+    background-color: white;
+    border-left: $-offers-card-border-width solid $-offers-card-border-color;
+    border-right: $-offers-card-border-width solid $-offers-card-border-color;
+    border-top: $-offers-card-border-width solid $-offers-card-border-color;
+}
+
+.offers__card-primary::after {
     content: "";
     display: block;
     position: absolute;
