--- a/Fotography/styles/pages/home/_gallery.scss
+++ b/Fotography/styles/pages/home/_gallery.scss
@@ -43,8 +43,19 @@
 }
 
 .gallery__list--cb-toggle {
+    animation: gallery__list--cb-toggle-show 1s ease-in-out 0s 1;
+
     .gallery__cb-toggle:not(:checked) ~ & {
         display: none;
+    }
+}
+
+@keyframes gallery__list--cb-toggle-show {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
 
@@ -63,7 +74,49 @@
 
 
 .gallery__list-item {
+    $animation-duration: 0.2s;
     display: block;
+
+    position: relative;
+    filter: contrast(1.1) brightness(1.15) saturate(1.1);
+    transform: scale(1);
+    z-index: 0;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0);
+    transition: filter $animation-duration ease-in-out, 
+                box-shadow $animation-duration ease-in-out,
+                transform $animation-duration ease-in-out, 
+                z-index $animation-duration linear;
+
+    &::before {
+        display: block;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+        opacity: 1;
+        transition: opacity $animation-duration ease-in-out;
+
+        background: radial-gradient(circle closest-corner, transparent 0, rgba(175, 105, 24, .4) 100%);
+        content: "";
+        mix-blend-mode: multiply;
+    }
+
+    &:hover {
+        box-shadow: 0 0 1rem rgba(0, 0, 0, 1);
+        transform: scale(1.1);
+        z-index: 1000;
+        transition: filter $animation-duration ease-in-out, 
+                    box-shadow $animation-duration ease-in-out,
+                    transform $animation-duration ease-in-out, 
+                    z-index 0s linear;
+
+        filter: contrast(1) brightness(1) saturate(1);
+        &::before {
+            opacity: 0;
+        }
+    }
 
     &--first {
         grid-column-start: 1;
@@ -79,6 +132,11 @@
 
         grid-row-start: 1;
         grid-row-end: span 2;
+
+        @media (max-width: $breakpoint-xs) { 
+            grid-column-start: 1;
+            grid-column-end: span 2;
+        }
     }
 }
 
@@ -89,3 +147,12 @@
     object-fit: cover;
 }
 
+.gallery__list-item-bg-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
