--- a/Fotography/styles/main.css
+++ b/Fotography/styles/main.css
@@ -24,11 +24,6 @@ html {
   font-family: "Jost", sans-serif;
 }
 
-input,
-select {
-  font-family: inherit;
-}
-
 /** 1200px oder schmaler */
 /** 992px oder schmaler */
 /** 768px oder schmaler */
@@ -106,13 +101,13 @@ select {
 }
 @media (max-width: 75em) {
   .header::before,
-.header::after {
+  .header::after {
     bottom: -4rem;
   }
 }
 @media (max-width: 62em) {
   .header::before,
-.header::after {
+  .header::after {
     bottom: -1rem;
   }
 }
@@ -221,7 +216,7 @@ select {
   text-shadow: 0 0 0.5rem black;
 }
 .navigation__list-item-link:hover {
-  border-bottom: 0.15rem solid #00e29c;
+  border-bottom: 0.15rem solid rgb(0, 226, 156);
 }
 .navigation__list-item--menu .navigation__list-item-link {
   margin-top: 0.4rem;
@@ -230,7 +225,7 @@ select {
 }
 .navigation__list-item--menu .navigation__list-item-link:hover {
   border-bottom: none;
-  color: #c8c8c8;
+  color: rgb(200, 200, 200);
 }
 .navigation__list-item-link--logo {
   margin-top: 0.9rem;
@@ -239,7 +234,7 @@ select {
 }
 .navigation__list-item-link--logo:hover {
   border-bottom: none;
-  color: #c8c8c8;
+  color: rgb(200, 200, 200);
 }
 
 .navigation__list-item-logo {
@@ -305,7 +300,7 @@ select {
 }
 
 .footer__paragraph {
-  color: #00e29c;
+  color: rgb(0, 226, 156);
   padding-top: 1rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
@@ -319,7 +314,7 @@ select {
 .footer__contact-item-icon {
   position: relative;
   z-index: 2;
-  background-color: #00e29c;
+  background-color: rgb(0, 226, 156);
   height: 4rem;
   width: 4rem;
   text-align: center;
@@ -372,7 +367,7 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(135deg, #00e29c 0%, #26464d 100%);
+  background-image: linear-gradient(135deg, rgb(0, 226, 156) 0%, #26464d 100%);
   border-radius: 1000000px;
 }
 @media (max-width: 62em) {
@@ -433,7 +428,7 @@ select {
   display: inline-block;
   border: 0.125rem solid currentColor;
   border-radius: 10000rem;
-  color: #00e29c;
+  color: rgb(0, 226, 156);
   text-decoration: none;
   padding: 1rem 6rem;
   text-transform: uppercase;
@@ -443,19 +438,6 @@ select {
 }
 .button:hover {
   color: #1cffb9;
-}
-
-.button--form {
-  font-size: 1rem;
-  padding: 0.75rem 1rem;
-  color: black;
-  background-color: #00e29c;
-  border: 0.125rem solid #00e29c;
-  font-weight: normal;
-  text-transform: none;
-}
-.button--form:hover {
-  color: #323232;
 }
 
 .button--background-blur {
@@ -469,7 +451,7 @@ select {
   box-shadow: 0 0 0.125rem rgba(0, 0, 0, 0.5);
 }
 .button--white:hover {
-  color: #e6e6e6;
+  color: rgb(230, 230, 230);
 }
 
 .button--secondary {
@@ -486,100 +468,6 @@ select {
 .button--slim {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.form__horizontal {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.form__group {
-  position: relative;
-  margin-bottom: 1.5rem;
-}
-.form__horizontal > .form__group {
-  margin-right: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-.form__input {
-  background-color: transparent;
-  border: 0.125rem solid #00e29c;
-  padding: 0.75rem 1rem;
-  color: #00e29c;
-  text-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
-  border-radius: 10000px;
-  font-size: 1rem;
-  width: 12.5rem;
-  font-family: inherit;
-}
-.form__input:focus {
-  outline: none;
-}
-.form__input::placeholder {
-  color: transparent;
-  text-shadow: none;
-}
-
-.form__label {
-  position: absolute;
-  top: 0.125rem;
-  left: 0;
-  font-size: 1rem;
-  margin: 0.75rem 1rem;
-  color: #00e29c;
-  text-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
-  transform-origin: 0% 50%;
-  transform: scale(1) translate(0, 0);
-  will-change: transform;
-  transition: transform 0.25s ease-in-out;
-}
-.form__input:focus ~ .form__label, .form__input[placeholder]:not(:placeholder-shown) ~ .form__label {
-  transform: scale(0.75) translate(0.4rem, 2.7rem);
-}
-
-.form__radio-item-radio {
-  display: inline-block;
-  position: relative;
-  top: -0.125rem;
-}
-
-.form__radio-item-label {
-  display: inline-block;
-  padding-left: 0.25rem;
-  color: #00e29c;
-  font-size: 1rem;
-  padding-top: 0.1rem;
-  text-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
-  /*
-  .form__radio-item-radio:checked ~ & {
-      font-weight: bold;
-  }
-  */
-}
-
-.form__radio-item--white .form__radio-item-radio {
-  display: none;
-}
-.form__radio-item--white .form__radio-item-label::before {
-  content: "";
-  position: relative;
-  top: 0.25em;
-  display: inline-block;
-  width: 0.9em;
-  height: 0.9em;
-  border: 0.175em solid white;
-  border-radius: 100000px;
-  margin-right: 0.5em;
-  background-image: radial-gradient(circle at center center, white 49%, transparent 50%);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 0 0;
-  transition: background-size 0.2s ease-in-out;
-}
-.form__radio-item--white .form__radio-item-radio:checked ~ .form__radio-item-label::before {
-  background-size: 100% 100%;
 }
 
 .motivation {
@@ -636,13 +524,13 @@ select {
 .motivation__column-images {
   float: left;
   width: 66.66%;
-  height: clamp(10rem, calc(35vw + 10rem), 36rem);
+  height: clamp(10rem, 35vw + 10rem, 36rem);
   position: relative;
 }
 @media (max-width: 62em) {
   .motivation__column-images {
     width: 50%;
-    height: clamp(10rem, calc(25vw + 10rem), 36rem);
+    height: clamp(10rem, 25vw + 10rem, 36rem);
   }
 }
 @media (max-width: 48em) {
@@ -650,13 +538,13 @@ select {
     width: 80%;
     float: none;
     margin: 0 auto;
-    height: clamp(10rem, calc(40vw + 10rem), 36rem);
+    height: clamp(10rem, 40vw + 10rem, 36rem);
   }
 }
 @media (max-width: 36em) {
   .motivation__column-images {
     width: 90%;
-    height: clamp(10rem, calc(45vw + 10rem), 36rem);
+    height: clamp(10rem, 45vw + 10rem, 36rem);
   }
 }
 
@@ -706,7 +594,7 @@ select {
 .motivation__image:hover {
   filter: grayscale(0%);
   transform: scale(1.05);
-  border: 0.33rem solid #00e29c;
+  border: 0.33rem solid rgb(0, 226, 156);
   padding: 0.33rem;
   z-index: 10;
 }
@@ -725,7 +613,7 @@ select {
   content: "Tame the wild";
   text-transform: uppercase;
   color: #011820;
-  font-size: min(calc(100vw / 9), 10rem);
+  font-size: min(11.1111111111vw, 10rem);
   font-weight: bold;
   text-shadow: 0 0 1px white;
   text-align: center;
@@ -804,7 +692,7 @@ select {
 }
 
 .tours__card-icon-background {
-  background-color: #00e29c;
+  background-color: rgb(0, 226, 156);
   position: absolute;
   top: 0;
   left: 0;
@@ -890,7 +778,7 @@ select {
 .tours__card-desc {
   font-size: 0.8rem;
   padding: 0.9rem 0;
-  background-image: linear-gradient(90deg, #00e29c 60%, transparent 60%);
+  background-image: linear-gradient(90deg, rgb(0, 226, 156) 60%, transparent 60%);
   background-position-y: top;
   background-repeat: no-repeat;
   background-size: 100% 0.125rem;
@@ -910,11 +798,13 @@ select {
   bottom: 0;
   width: 100%;
 }
-@supports (object-fit: cover) and (object-position: center center) {
+@supports ((-o-object-fit: cover) or (object-fit: cover)) and ((-o-object-position: center center) or (object-position: center center)) {
   .story__video {
     height: 100%;
-    object-fit: cover;
-    object-position: center center;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center center;
+       object-position: center center;
   }
 }
 
@@ -963,14 +853,18 @@ select {
   margin: 0 auto;
   color: white;
   text-shadow: 0 0 0.125rem rgba(0, 0, 0, 0.5);
-  column-count: 2;
-  column-gap: 4rem;
-  column-rule: 0.125rem solid rgba(255, 255, 255, 0.5);
+  -moz-column-count: 2;
+       column-count: 2;
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
+  -moz-column-rule: 0.125rem solid rgba(255, 255, 255, 0.5);
+       column-rule: 0.125rem solid rgba(255, 255, 255, 0.5);
   text-align: justify;
 }
 @media (max-width: 48em) {
   .story__desc {
-    column-count: 1;
+    -moz-column-count: 1;
+         column-count: 1;
     text-align: left;
   }
 }
@@ -981,7 +875,7 @@ select {
 }
 
 .offers {
-  background-color: #f0f0f0;
+  background-color: rgb(240, 240, 240);
   min-height: 5rem;
 }
 
@@ -1032,14 +926,14 @@ select {
   left: -0.0625rem;
   right: -0.0625rem;
   height: 0.75rem;
-  background-color: #00e29c;
+  background-color: rgb(0, 226, 156);
   border-left: 0.0625rem solid #5fcaa9;
   border-right: 0.0625rem solid #5fcaa9;
 }
 
 .offers__image-container {
   position: relative;
-  background-color: #00e29c;
+  background-color: rgb(0, 226, 156);
   margin-top: -0.0625rem;
   margin-right: -0.0625rem;
   margin-left: -0.0625rem;
@@ -1096,7 +990,7 @@ select {
 }
 
 .offers__content-subheading {
-  color: #00e29c;
+  color: rgb(0, 226, 156);
   font-size: 1rem;
 }
 
@@ -1131,7 +1025,7 @@ select {
 
 .offers__content-price {
   display: block;
-  color: #00e29c;
+  color: rgb(0, 226, 156);
   font-weight: 500;
   font-size: 2rem;
   line-height: 0.9em;
@@ -1144,7 +1038,7 @@ select {
   right: -0.0625rem;
   bottom: -0.0625rem;
   z-index: 2;
-  background-color: #00e29c;
+  background-color: rgb(0, 226, 156);
   background-image: linear-gradient(90deg, transparent calc(50% - 0.03125rem), white calc(50% - 0.03125rem), white calc(50% + 0.03125rem), transparent calc(50% + 0.03125rem)), linear-gradient(135deg, #00e29c 0%, #00b57d 100%);
   background-repeat: no-repeat, no-repeat;
   background-position: center top, center center;
@@ -1171,7 +1065,6 @@ select {
   transform: rotateY(180deg);
 }
 .offers__card-container--flip .offers__card-primary {
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   transform: rotateY(0deg);
   transform-style: preserve-3d;
@@ -1179,7 +1072,6 @@ select {
 .offers__card-container--flip .offers__card-hover {
   transform: rotateY(180deg);
   opacity: 1;
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
@@ -1188,7 +1080,7 @@ select {
 }
 .offers__card-container--3d-hover .offers__card, .offers__card-container--3d .offers__card {
   transition: transform 0.5s ease-in-out;
-  transform: rotateX(calc(calc(var(--mouse-y, 0.5) - 0.5) * -20deg)) rotateY(calc(calc(var(--mouse-x, 0.5) - 0.5) * 20deg));
+  transform: rotateX(calc((var(--mouse-y, 0.5) - 0.5) * -20deg)) rotateY(calc((var(--mouse-x, 0.5) - 0.5) * 20deg));
 }
 .offers__card-container--3d-hover:hover .offers__card, .offers__card-container--3d:hover .offers__card {
   transition: transform 0.1s linear;
@@ -1324,7 +1216,7 @@ select {
   mix-blend-mode: multiply;
 }
 .gallery__list-item:hover {
-  box-shadow: 0 0 1rem black;
+  box-shadow: 0 0 1rem rgb(0, 0, 0);
   transform: scale(1.1);
   z-index: 1000;
   transition: filter 0.2s ease-in-out, box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out, z-index 0s linear;
@@ -1356,7 +1248,8 @@ select {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .gallery__list-item-bg-image {
@@ -1381,7 +1274,8 @@ select {
 .about__img {
   width: 32rem;
   height: 32rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   float: left;
   border-radius: 1000000px;
   /* clip-path: circle(50% at 50% 50%); */
@@ -1492,7 +1386,7 @@ select {
   font-weight: 500;
   letter-spacing: 0.1em;
   font-size: 2rem;
-  color: #00e29c;
+  color: rgb(0, 226, 156);
 }
 
 .about__text {
@@ -1505,7 +1399,7 @@ select {
   height: 0.25rem;
   width: 4rem;
   margin-left: 1rem;
-  background-color: #00e29c;
+  background-color: rgb(0, 226, 156);
 }
 @media (max-width: 75em) {
   .about__text {
@@ -1526,118 +1420,4 @@ select {
 }
 .about__quote::after {
   content: "“";
-}
-
-.booking-modal {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  z-index: 20000;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  color: white;
-}
-.booking-modal:target {
-  display: flex;
-}
-.booking-modal::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  animation-name: booking-modal--fade-in;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  background-color: rgba(0, 0, 0, 0.85);
-}
-@supports (backdrop-filter: blur(4rem)) {
-  .booking-modal::before {
-    background-color: rgba(0, 0, 0, 0.15);
-    backdrop-filter: blur(4rem);
-  }
-}
-
-@keyframes booking-modal--fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.booking-modal__content {
-  position: relative;
-  width: 45rem;
-  height: 23rem;
-  max-width: 100vw;
-  max-height: 100vh;
-  overflow: auto;
-  border-radius: 0.25rem;
-  padding-left: calc(min(100vw, 45rem) * 0.375);
-  background-image: linear-gradient(95.7391704773deg, transparent 33%, rgba(64, 118, 130, 0.85) 33.15%), linear-gradient(90deg, transparent 33%, rgba(255, 255, 255, 0.5) 100%), url("../images/modal/pexels-david-bartus-610293.jpg");
-  background-color: #7f7f7f;
-  background-repeat: no-repeat, no-repeat, no-repeat;
-  background-position: center center, center center, center 30%;
-  background-size: auto, auto, cover;
-  box-shadow: 0 0 1rem black;
-  animation-name: booking-modal__content--fade-in;
-  animation-duration: 1s;
-  animation-delay: 1s;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: backwards;
-}
-
-@keyframes booking-modal__content--fade-in {
-  0% {
-    transform: translate(0, calc(-50vh - 50%));
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-.booking-modal__close {
-  display: block;
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-  width: 1.25rem;
-  height: 1.25rem;
-  color: transparent;
-  border-radius: 100000px;
-  filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
-  background-image: linear-gradient(-45deg, transparent 44%, #00e29c 45%, #00e29c 55%, transparent 56%), linear-gradient(45deg, transparent 44%, #00e29c 45%, #00e29c 55%, transparent 56%);
-}
-.booking-modal__close:hover {
-  opacity: 0.8;
-}
-
-.booking-modal__heading {
-  padding-top: 3rem;
-  color: white;
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin-bottom: 0.35rem;
-  text-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
-}
-
-.booking-modal__submit-container {
-  text-align: right;
-  margin-right: 1.5rem;
-  margin-top: 1rem;
-}
-
-.booking-modal__paragraph {
-  font-weight: 250;
-  margin-bottom: 1rem;
-  text-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
